k8s-service-cde-rain.yml
apiVersion: v1
kind: Service
metadata:
  name: service-projet-cde-rain
  labels:
    app: PROJET-K8S-CDE-RAIN
spec:
  type: ClusterIP
  ports:
  - port: 8002
    protocol: TCP
    targetPort: 8000
  selector:
    app: PROJET-K8S-CDE-RAIN
