k8s-ingress-cde-rain.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-projet-cde-rain
spec:
  defaultBackend:
    service:
      name: service-projet-cde-rain 
      port:
        number: 8002
